--- a/web-server/react-app/public/index.html
+++ b/web-server/react-app/public/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBTy9VnOFtkzwMuqJWcqGNmwSEMXaSzJ8&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
