dev: Modified web-app portions to utilize env variables

--- a/web-server/react-app/public/index.html
+++ b/web-server/react-app/public/index.html
@@ -16,6 +16,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBTy9VnOFtkzwMuqJWcqGNmwSEMXaSzJ8&libraries=places"></script>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     <div id="root"></div>
   </body>
 </html>
