--- a/web-server/react-app/public/index.html
+++ b/web-server/react-app/public/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>React App</title>
+    <title>Rate A Rental</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBTy9VnOFtkzwMuqJWcqGNmwSEMXaSzJ8&libraries=places"></script>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <script crossorigin src="https://unpkg.com/universal-cookie@3/umd/universalCookie.min.js"></script>
     <div id="root"></div>
   </body>
 </html>
