--- a/web-server/react-app/public/index.html
+++ b/web-server/react-app/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBTy9VnOFtkzwMuqJWcqGNmwSEMXaSzJ8&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_API_KEY%&libraries=places"></script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     <div id="root"></div>
   </body>
